--- a/recipes/templates/includes/nav.html
+++ b/recipes/templates/includes/nav.html
@@ -15,7 +15,7 @@
                 <li class="nav__item {% if 'followers_view' == request.resolver_match.url_name %}nav__item_active{% endif %}"><a href="{% url 'followers_view' %}" class="nav__link link">Мои подписки</a></li>
                 <li class="nav__item {% if 'recipe_new_view' == request.resolver_match.url_name %}nav__item_active{% endif %}"><a href="{% url 'recipe_new_view' %}" class="nav__link link">Создать рецепт</a></li>
                 <li class="nav__item {% if 'favorite_view' == request.resolver_match.url_name %}nav__item_active{% endif %}"><a href="{% url 'favorite_view' %}" class="nav__link link">Избранное</a></li>
-                <li class="nav__item {% if 'purchases_view' == request.resolver_match.url_name %}nav__item_active{% endif %}"><a href="{% url 'purchases_view' %}" class="nav__link link">Список покупок</a><span class="badge badge_style_blue nav__badge" id="counter">{{ request.user|ingredient_count }}</span></li>
+                <li class="nav__item {% if 'purchases_view' == request.resolver_match.url_name %}nav__item_active{% endif %}"><a href="{% url 'purchases_view' %}" class="nav__link link">Список покупок</a><span class="badge badge_style_blue nav__badge" id="counter"></span></li>
             </ul>
                 <ul class="nav__items list">
                     <li class="nav__item {% if 'password_change' in request.resolver_match.url_name %}nav__item_active{% endif %}"><a href="{% url 'password_change' %}" class="nav__link link">Изменить пароль</a></li>
